fixed issue where, required label fields per layout would not align properly

--- a/force-app/main/default/aura/JNAppInfoTab/JNAppInfoTab.css
+++ b/force-app/main/default/aura/JNAppInfoTab/JNAppInfoTab.css
@@ -1,2 +1,3 @@
-.THIS {
+.THIS .slds-form-element__label {
+    font-size: 0.95rem !important;
 }
